--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ code {
 
 .Navbar {
   font-size: 24px;
+  margin: 10px;
 }
 
 ul {
@@ -35,7 +36,7 @@ li a {
 }
 
 li a:hover {
-  background-color: #000;
+  background-color: #555;
 }
 
 .navRight {
@@ -43,16 +44,24 @@ li a:hover {
 }
 
 .Home {
+  height: 100vh;
+  width: 100vw;
   display: flex;
   flex-wrap: nowrap;
+  align-items: center;
 }
 
 aside {
   float: right;
-  width: 25%
+  width: 25%;
 }
 
-.Shop {
+.Shop h1 {
+  display: flex;
+  justify-content: center;
+}
+
+.cardContainer {
   display: flex;
   flex-wrap: wrap;
 }
@@ -61,7 +70,8 @@ aside {
   flex: 1 0 21%;
   background-color: #E8E8E8;
   width: 300px;
-  height: 500px;
+  height: 550px;
+  padding-left: 50px;
 }
 
 .ProductCard img {
